    - Add ability to follow POST redirects
    - Don't print stack traces during constructor errors, this can leak auth info into logs
    - Don't override filename in TAP Parser if we already have it
    - Fix issue where non-standard status overrides were not possible
    - Add finder callback to TestRail::Utils::FindTests
    - Add testsuite_id filter to TestRail::API::getChildRunByName

0.037 2016-08-10 TEODESIAN
    - Fix incorrect POD for TestRail::API::createRunInPlan
    - Add testrail-results binary and TestRail::Utils::Find::getResults.
    - Add TestRail::API::getChildSections, and modify Test::Rail::Parser to recursively search passed sections when spawning runs
    - Change TestRail::API::getSections to cache the sections in a project.
    - Add notices about problems with duplicate entries to POD.
    - Add capability to auto-spawn configurations/groups to App::Prove::Plugin::TestRail and friends when configuration_group is passed

0.036 2016-04-25 TEODESIAN
    - Fix using wrong perl during testsuite when running binaries
    - Silence testsuite for easier diagnosis of issues
    - Fix warnings due to undef comparison in TestRail::Utils::Find
    - Change to using Pod::Usage for help output rather than Pod::Perldoc

0.035 2016-04-23 TEODESIAN
    - Fix testrail-report and testrail-cases broken binary arg passing
    - Fix issue where TODO PASS was reported in tests with TODO FAILs.
    - Fix issue where TODO FAILED steps were reported as TODO PASS.
    - Fix issue where the value of the step_results field was ignored by Test::Rail::Parser
    - Fix issue where Test::Rail::Parser would truncate results in non case-per-ok mode
    - Remove case_per_ok feature from Test::Rail::Parser, never really worked it turns out

0.034 2016-02-18 TEODESIAN
    - Use Capture::Tiny rahter than IO::CaptureOutput in unit tests
    - Allow users to signal Test::Rail::Parser to set a custom status