@@ -8,6 +8,7 @@ Revision history for Perl module TestRail::API
     - Fix issue where non-standard status overrides were not possible
     - Add finder callback to TestRail::Utils::FindTests
     - Add testsuite_id filter to TestRail::API::getChildRunByName
+    - Add defect metrics to testrail-results
 
 0.037 2016-08-10 TEODESIAN
     - Fix incorrect POD for TestRail::API::createRunInPlan
